enviando angulo e forca

--- a/Assets/jump-controller.html
+++ b/Assets/jump-controller.html
@@ -40,8 +40,11 @@
       }
     }
 
-  App.prototype.sendMessageToScreen = function(msg, angle, force){
+  App.prototype.sendMessageToScreen = function(msg, angle, force) {
 		console.log("button press jump");
+    console.log(msg);
+    console.log(force);
+    console.log(angle);
 		this.airconsole.message(AirConsole.SCREEN, {"action": msg, "angle": angle, "force":force })
 	}
 
@@ -50,7 +53,7 @@
 </head>
 <body onload="window.app = new App()">
   <!-- Add your HTML elements here -->
-  <div id= "interact-button" ontouchstart= "window.app.sendMessageToScreen('interact')">
+  <div id= "interact-button">
     <button onmousedown="stop()" >touch me</button>
 	</div>
   <div>
